--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rg
 </head>
 <body>
 <nav>
-<h1>ENGINEER SAHAB</h1>
+<h1>ENGINEER &nbsp &nbsp SAHAB</h1>
 </nav>
 <section>
     <span><img src="gaurav.png"></span>
