--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rg
     <p> "Best friends are people who make your problems their problems, just so you don’t have to go through them alone."</p>
     </span>
    <hr>
-    <span><img src="prerna.png"></span>
+    <span><img src="prerna.jpg"></span>
     <span>
     <h3>Prerna Pandey</h3>
     <p> “Sweet is the memory of distant friends! Like the mellow rays of the departing sun, it falls tenderly, yet sadly, on the heart.”</p>
@@ -78,7 +78,7 @@ background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rg
     <p></p>“Ultimately the bond of all companionship, whether in marriage or in friendship, is conversation.”</p><br><br>
     </span>
     <hr>
-    <span><img src="harshit.jpg"></span>
+    <span><img src="harshit.png"></span>
     <span>
     <h3>Harshit</h3>
     <p></p>“I don’t need a friend who changes when I change and who nods when I nod; my shadow does that much better.”</p><br>
