--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rg
   				}  
   img{
   				width:40%;
-  				max-height:40%;
+  				height:50%;
   				float:left;
-  				margin-right:15px;
+  				margin-right:17px;
   				}
   	hr{
   			border:1px solid black;
