--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rg
     <h3>Prerna Pandey</h3>
     <p> “Sweet is the memory of distant friends! Like the mellow rays of the departing sun, it falls tenderly, yet sadly, on the heart.”</p>
     </span>
+   <br>
    <hr>
    <span><img src="kanishka.jpg"></span>
     <span>
@@ -87,7 +88,7 @@ background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rg
     <span><img src="amogh.jpg"></span>
     <span>
     <h3>Amogh</h3>
-    <p></p>“The real test of friendship is can you literally do nothing with the other person? Can you enjoy those moments of life that are utterly simple?”</p><br>
+    <p></p>“The real test of friendship is can you literally do nothing with the other person? Can you enjoy those moments of life that are utterly simple?”</p>
     
     </span>
     <hr>
