--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@ background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rg
   nav{
   				
   				background:#464040;
+                                margin:0;
   				color:#f1f1f1;
   				width:100%;
   				text-align:center;
   				}  
+  h1{
+                                margin:0;
+                                padding:5px;
+                                }
   img{
   				width:40%;
   				height:50%;
