--- a/index.html
+++ b/index.html
@@ -5,126 +5,123 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+  *{
+  				margin:0;
+  				padding:0;
+  				}
   body{
   				background: rgb(215,123,163);
-background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rgba(177,206,240,1) 99%, rgba(144,157,186,1) 100%);
+      background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rgba(177,206,240,1) 99%, rgba(144,157,186,1) 100%);
   				}
   nav{
   				
   				background:#464040;
-                                margin:0;
   				color:#f1f1f1;
-  				width:100%;
   				text-align:center;
+  				margin-bottom:10px;
   				}  
-  h1{
-                                margin:0;
-                                padding:5px;
-                                }
+  	div{
+  					display:inline-block;
+  					margin:2%;
+  					text-align:center;
+  					}
+  	h1,h3{
+  					padding:10px;
+  					}
   img{
   				width:40%;
   				height:50%;
   				float:left;
-  				margin-right:17px;
+  				margin-right:15px;
   				}
   	hr{
   			border:1px solid black;
+  			margin:5px;
   			}
-  	h3{
-  				text-align:center;
-  				}
   </style>
-  <title>Friends</title>
+  <title>Friends Page</title>
 </head>
 <body>
 <nav>
-<h1>ENGINEER &nbsp &nbsp SAHAB</h1>
+<h1>ENGINEER&nbsp SAHAB</h1>
 </nav>
-<section>
-    <span><img src="gaurav.png"></span>
-    <span>
-    <h3>Gaurav Pandey</h3>
-    <p> "Best friends are people who make your problems their problems, just so you don’t have to go through them alone."</p>
-    </span>
-   <hr>
-    <span><img src="prerna.jpg"></span>
-    <span>
-    <h3>Prerna Pandey</h3>
-    <p> “Sweet is the memory of distant friends! Like the mellow rays of the departing sun, it falls tenderly, yet sadly, on the heart.”</p>
-    </span>
-   <br>
-   <hr>
-   <span><img src="kanishka.jpg"></span>
-    <span>
-    <h3>Kanishka</h3>
-    <p></p>“I like to listen. I have learned a great deal from listening carefully. Most people never listen.”</p><br><br>
-    </span>
-    <hr>
-    <span><img src="utk.png"></span>
-    <span>
-    <h3>Utkarsh</h3>
-    <p></p>“Friendship is born at that moment when one person says to another, ‘What! You too? I thought I was the only one.”</p>
-    </span>
-    <hr>
-    <span><img src="arsh.jpg"></span>
-    <span>
-    <h3>Mohd. Arsh</h3>
-    <p></p>“Don’t make friends who are comfortable to be with. Make friends who will force you to lever yourself up.”</p><br>
-    </span>
-    <hr>
-    <span><img src="kaustav.jpg"></span>
-    <span>
-    <h3>Kaustav</h3>
-    <p></p>“A friend is someone who understands your past, believes in your future, and accepts you just the way you are.”</p><br><br>
-    </span>
-    <hr>
-    <span><img src="vanshika.jpg"></span>
-    <span>
-    <h3>Vanshika</h3>
-    <p></p>“Ultimately the bond of all companionship, whether in marriage or in friendship, is conversation.”</p><br><br>
-    </span>
-    <hr>
-    <span><img src="harshit.png"></span>
-    <span>
-    <h3>Harshit</h3>
-    <p></p>“I don’t need a friend who changes when I change and who nods when I nod; my shadow does that much better.”</p><br>
-    </span>
-    <hr>
-    <span><img src="amogh.jpg"></span>
-    <span>
-    <h3>Amogh</h3>
-    <p></p>“The real test of friendship is can you literally do nothing with the other person? Can you enjoy those moments of life that are utterly simple?”</p>
-    
-    </span>
-    <hr>
-    <span><img src="adi.jpg"></span>
-    <span>
-    <h3>Adishree</h3>
-    <p></p>“Each friend represents a world in us, a world possibly not born until they arrive, and it is only by this meeting that a new world is born.”</p><br>
-    </span>
-    <hr>
-    <span><img src="mahak.jpg"></span>
-    <span>
-    <h3>Mahak Singh</h3>
-    <p></p>“In the End, we will remember not the words of our enemies, but the silence of our friends.”</p>
-    </span>
-    <br>
-    <br>
-    <hr>
-    <span><img src="apporva.png"></span>
-    <span>
-    <h3>Apoorva</h3>
-    <p></p>“If you go looking for a friend, you’re going to find they’re very scarce. If you go out to be a friend, you’ll find them everywhere.”</p><br>
-    </span>
-    <hr>
     <div>
-    <span><img src="pranit.jpg"></span>
-    <span>
-    <h3>Pranit Puri</h3>
-    <p> “You can always tell a real friend: when you’ve made a fool of yourself he doesn’t feel you’ve done a permanent job.”</p><br>
-    </span>
+      <img src="gaurav.png">
+      <h3>Gaurav Pandey</h3>
+      <p> "Best friends are people who make your problems their problems, just so you don’t have to go through them alone."</p>
+   </div>
+     <hr>
+   <div>
+     <img src="prerna.jpg">
+     <h3>Prerna Pandey</h3>
+     <p> “Sweet is the memory of distant friends! Like the mellow rays of the departing sun, it falls tenderly, yet sadly, on the heart.”</p>
+   </div>
+     <hr>
+   <div>
+     <img src="kanishka.jpg">
+     <h3>Kanishka</h3>
+     <p>“I like to listen. I have learned a great deal from listening carefully. Most people never listen.”</p>
+   </div>
+     <hr>
+   <div>
+     <img src="utk.png">
+     <h3>Utkarsh</h3>
+     <p>“Friendship is born at that moment when one person says to another, ‘What! You too? I thought I was the only one.”</p>
+   </div>
+     <hr>
+   <div>
+     <img src="arsh.jpg">
+     <h3>Mohd. Arsh</h3>
+     <p>“Don’t make friends who are comfortable to be with. Make friends who will force you to lever yourself up.”</p>
+  </div>
     <hr>
-    </div>
-</section>
+  <div>
+    <img src="kaustav.jpg">
+    <h3>Kaustav</h3>
+    <p>“A friend is someone who understands your past, believes in your future, and accepts you just the way you are.”</p>
+  </div>
+    <hr>
+  <div>
+    <img src="vanshika.jpg">
+    <h3>Vanshika</h3>
+    <p>“Ultimately the bond of all companionship, whether in marriage or in friendship, is conversation.”</p>
+  </div>
+    <hr>
+  <div>
+    <img src="harshit.png">
+    <h3>Harshit</h3>
+    <p>“I don’t need a friend who changes when I change and who nods when I nod; my shadow does that much better.”</p>
+  </div>
+    <hr>
+  <div>
+    <img src="amogh.jpg">
+    <h3>Amogh</h3>
+    <p>“The real test of friendship is can you literally do nothing with the other person? Can you enjoy those moments of life that are utterly simple?”</p>
+  </div>
+    <hr>
+  <div>
+    <img src="adi.jpg">
+    <h3>Adishree</h3>
+    <p>“Each friend represents a world in us, a world possibly not born until they arrive, and it is only by this meeting that a new world is born.”</p>
+  </div>
+    <hr>
+  <div>
+    <img src="mahak.jpg">
+    <h3>Mahak Singh</h3>
+    <p>“In the End, we will remember not the words of our enemies, but the silence of our friends.”</p>
+  </div>
+    <hr>
+  <div>
+    <img src="apporva.png">
+    <h3>Apoorva</h3>
+    <p>“If you go looking for a friend, you’re going to find they’re very scarce. If you go out to be a friend, you’ll find them everywhere.”</p>
+  </div>
+    <hr>
+  <div>
+    <img src="pranit.jpg">
+    <h3>Pranit Puri</h3>
+    <p> “You can always tell a real friend: when you’ve made a fool of yourself he doesn’t feel you’ve done a permanent job.”</p>
+  </div>
+    <hr>
 </body>
 </html>
