--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   				}
   body{
   				background: rgb(215,123,163);
-      background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rgba(177,206,240,1) 99%, rgba(144,157,186,1) 100%);
-  				}
+                                background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rgba(177,206,240,1) 99%, rgba(144,157,186,1) 100%);
+  				max-width:600px;
+                                }
   nav{
   				
   				background:#464040;
