--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="icon.png">
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <style>
   *{
   				margin:0;
@@ -126,5 +127,7 @@
     <p> “You can always tell a real friend: when you’ve made a fool of yourself he doesn’t feel you’ve done a permanent job.”</p>
   </div>
     <hr>
+  <br>
+  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="paras-gupta-34a780166"><a class="LI-simple-link" href='https://in.linkedin.com/in/paras-gupta-34a780166?trk=profile-badge'>Paras Gupta</a></div>
 </body>
 </html>
