--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
   </div>
     <hr>
   <br>
-  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="paras-gupta-34a780166"><a class="LI-simple-link" href='https://in.linkedin.com/in/paras-gupta-34a780166?trk=profile-badge'>Paras Gupta</a></div>
+  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="paras-gupta-34a780166"><a class="LI-simple-link" href='https://in.linkedin.com/in/paras-gupta-34a780166?trk=profile-badge'>Paras Gupta</a></div>
 </body>
 </html>
