--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
     <hr>
   <br>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="paras-gupta-34a780166"><a class="LI-simple-link" href='https://in.linkedin.com/in/paras-gupta-34a780166?trk=profile-badge'>Paras Gupta</a></div>
-</body>
+  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="paras-gupta-34a780166"><a class="LI-simple-link" href='https://in.linkedin.com/in/paras-gupta-34a780166?trk=profile-badge'>Paras Gupta</a></div>
+  </body>
 </html>
