--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   			border:1px solid black;
   			margin:5px;
   			}
+    .LI-profile-badge{
+      width:100%;
+    }
   </style>
   <title>Friends Page</title>
   
