--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
   			}
     .LI-profile-badge{
       width:100%;
-      margin:auto;
-      
+      margin:10px;
     }
   </style>
   <title>Friends Page</title>
