Making photos alternate right and left

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   				}
   body{
   				background: rgb(215,123,163);
-                                background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rgba(177,206,240,1) 99%, rgba(144,157,186,1) 100%);
+                background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rgba(177,206,240,1) 99%, rgba(144,157,186,1) 100%);
   				max-width:600px;
-                                margin:auto;
+                margin:auto;
                                 }
   nav{
   				
@@ -36,6 +36,12 @@
   				height:50%;
   				float:left;
   				margin-right:15px;
+  				}
+  .img2{
+  				width:40%;
+  				height:50%;
+  				float:right;
+  				margin-left:15px;
   				}
   	hr{
   			border:1px solid black;
@@ -60,7 +66,7 @@
    </div>
      <hr>
    <div>
-     <img src="prerna.jpg">
+     <img class="img2" src="prerna.jpg">
      <h3>Prerna Pandey</h3>
      <p> “Sweet is the memory of distant friends! Like the mellow rays of the departing sun, it falls tenderly, yet sadly, on the heart.”</p>
    </div>
@@ -72,7 +78,7 @@
    </div>
      <hr>
    <div>
-     <img src="utk.png">
+     <img class="img2" src="utk.png">
      <h3>Utkarsh</h3>
      <p>“Friendship is born at that moment when one person says to another, ‘What! You too? I thought I was the only one.”</p>
    </div>
@@ -84,7 +90,7 @@
   </div>
     <hr>
   <div>
-    <img src="kaustav.jpg">
+    <img class="img2" src="kaustav.jpg">
     <h3>Kaustav</h3>
     <p>“A friend is someone who understands your past, believes in your future, and accepts you just the way you are.”</p>
   </div>
@@ -96,7 +102,7 @@
   </div>
     <hr>
   <div>
-    <img src="harshit.png">
+    <img class="img2" src="harshit.png">
     <h3>Harshit</h3>
     <p>“I don’t need a friend who changes when I change and who nods when I nod; my shadow does that much better.”</p>
   </div>
@@ -108,7 +114,7 @@
   </div>
     <hr>
   <div>
-    <img src="adi.jpg">
+    <img class="img2" src="adi.jpg">
     <h3>Adishree</h3>
     <p>“Each friend represents a world in us, a world possibly not born until they arrive, and it is only by this meeting that a new world is born.”</p>
   </div>
@@ -120,7 +126,7 @@
   </div>
     <hr>
   <div>
-    <img src="apporva.png">
+    <img class="img2" src="apporva.png">
     <h3>Apoorva</h3>
     <p>“If you go looking for a friend, you’re going to find they’re very scarce. If you go out to be a friend, you’ll find them everywhere.”</p>
   </div>
@@ -132,7 +138,7 @@
   </div>
     <hr>
   <br>
-  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="paras-gupta-34a780166"><a class="LI-simple-link" href='https://in.linkedin.com/in/paras-gupta-34a780166?trk=profile-badge'>Paras Gupta</a></div>
+ <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="paras-gupta-34a780166"><a class="LI-simple-link" href='https://in.linkedin.com/in/paras-gupta-34a780166?trk=profile-badge'>Paras Gupta</a></div>
+   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   </body>
 </html>
