--- a/index.html
+++ b/index.html
@@ -1,138 +1,158 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="icon.png">
   <style>
-  *{
-  				margin:0;
-  				padding:0;
-  				}
-  body{
-  				background: rgb(215,123,163);
-                                background: radial-gradient(circle, rgba(215,123,163,0.6736370233389047) 20%, rgba(177,206,240,1) 99%, rgba(144,157,186,1) 100%);
-  				max-width:600px;
-                                margin:auto;
-                                }
-  nav{
-  				
-  				background:#464040;
-  				color:#f1f1f1;
-  				text-align:center;
-  				margin-bottom:10px;
-  				}  
-  	div{
-  					display:inline-block;
-  					margin:2%;
-  					text-align:center;
-  					}
-  	h1,h3{
-  					padding:10px;
-  					}
-  img{
-  				width:40%;
-  				height:50%;
-  				float:left;
-  				margin-right:15px;
-  				}
-  	hr{
-  			border:1px solid black;
-  			margin:5px;
-  			}
-    .LI-profile-badge{
-      width:100%;
-      margin:10px;
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background: rgb(215, 123, 163);
+      background: radial-gradient(circle, rgba(215, 123, 163, 0.6736370233389047) 20%, rgba(177, 206, 240, 1) 99%, rgba(144, 157, 186, 1) 100%);
+      max-width: 600px;
+      margin: auto;
+    }
+
+    nav {
+
+      background: #464040;
+      color: #f1f1f1;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    div {
+      display: inline-block;
+      margin: 2%;
+      text-align: center;
+    }
+
+    h1,
+    h3 {
+      padding: 10px;
+    }
+
+    img {
+      width: 40%;
+      height: 50%;
+      float: left;
+      margin-right: 15px;
+    }
+
+    hr {
+      border: 1px solid black;
+      margin: 5px;
+    }
+
+    .LI-profile-badge {
+      width: 100%;
+      margin: 10px;
     }
   </style>
   <title>Friends Page</title>
-  
+
 </head>
+
 <body>
-<nav>
-<h1>ENGINEER&nbsp SAHAB</h1>
-</nav>
-    <div>
-      <img src="gaurav.png">
-      <h3>Gaurav Pandey</h3>
-      <p> "Best friends are people who make your problems their problems, just so you don’t have to go through them alone."</p>
-   </div>
-     <hr>
-   <div>
-     <img src="prerna.jpg">
-     <h3>Prerna Pandey</h3>
-     <p> “Sweet is the memory of distant friends! Like the mellow rays of the departing sun, it falls tenderly, yet sadly, on the heart.”</p>
-   </div>
-     <hr>
-   <div>
-     <img src="kanishka.jpg">
-     <h3>Kanishka</h3>
-     <p>“I like to listen. I have learned a great deal from listening carefully. Most people never listen.”</p>
-   </div>
-     <hr>
-   <div>
-     <img src="utk.png">
-     <h3>Utkarsh</h3>
-     <p>“Friendship is born at that moment when one person says to another, ‘What! You too? I thought I was the only one.”</p>
-   </div>
-     <hr>
-   <div>
-     <img src="arsh.jpg">
-     <h3>Mohd. Arsh</h3>
-     <p>“Don’t make friends who are comfortable to be with. Make friends who will force you to lever yourself up.”</p>
+  <nav>
+    <h1>ENGINEER&nbsp;SAHAB</h1>
+  </nav>
+  <div>
+    <img src="gaurav.png">
+    <h3>Gaurav Pandey</h3>
+    <p> "Best friends are people who make your problems their problems, just so you don't have to go through them
+      alone."</p>
   </div>
-    <hr>
+  <hr>
+  <div>
+    <img src="prerna.jpg">
+    <h3>Prerna Pandey</h3>
+    <p> “Sweet is the memory of distant friends! Like the mellow rays of the departing sun, it falls tenderly, yet
+      sadly, on the heart.”</p>
+  </div>
+  <hr>
+  <div>
+    <img src="kanishka.jpg">
+    <h3>Kanishka</h3>
+    <p>“I like to listen. I have learned a great deal from listening carefully. Most people never listen.”</p>
+  </div>
+  <hr>
+  <div>
+    <img src="utk.png">
+    <h3>Utkarsh</h3>
+    <p>“Friendship is born at that moment when one person says to another, ‘What! You too? I thought I was the only
+      one.”</p>
+  </div>
+  <hr>
+  <div>
+    <img src="arsh.jpg">
+    <h3>Mohd. Arsh</h3>
+    <p>“Don't make friends who are comfortable to be with. Make friends who will force you to lever yourself up.”</p>
+  </div>
+  <hr>
   <div>
     <img src="kaustav.jpg">
     <h3>Kaustav</h3>
-    <p>“A friend is someone who understands your past, believes in your future, and accepts you just the way you are.”</p>
+    <p>“A friend is someone who understands your past, believes in your future, and accepts you just the way you are.”
+    </p>
   </div>
-    <hr>
+  <hr>
   <div>
     <img src="vanshika.jpg">
     <h3>Vanshika</h3>
     <p>“Ultimately the bond of all companionship, whether in marriage or in friendship, is conversation.”</p>
   </div>
-    <hr>
+  <hr>
   <div>
     <img src="harshit.png">
     <h3>Harshit</h3>
-    <p>“I don’t need a friend who changes when I change and who nods when I nod; my shadow does that much better.”</p>
+    <p>“I don't need a friend who changes when I change and who nods when I nod; my shadow does that much better.”</p>
   </div>
-    <hr>
+  <hr>
   <div>
     <img src="amogh.jpg">
     <h3>Amogh</h3>
-    <p>“The real test of friendship is can you literally do nothing with the other person? Can you enjoy those moments of life that are utterly simple?”</p>
+    <p>“The real test of friendship is can you literally do nothing with the other person? Can you enjoy those moments
+      of life that are utterly simple?”</p>
   </div>
-    <hr>
+  <hr>
   <div>
     <img src="adi.jpg">
     <h3>Adishree</h3>
-    <p>“Each friend represents a world in us, a world possibly not born until they arrive, and it is only by this meeting that a new world is born.”</p>
+    <p>“Each friend represents a world in us, a world possibly not born until they arrive, and it is only by this
+      meeting that a new world is born.”</p>
   </div>
-    <hr>
+  <hr>
   <div>
     <img src="mahak.jpg">
     <h3>Mahak Singh</h3>
     <p>“In the End, we will remember not the words of our enemies, but the silence of our friends.”</p>
   </div>
-    <hr>
+  <hr>
   <div>
     <img src="apporva.png">
     <h3>Apoorva</h3>
-    <p>“If you go looking for a friend, you’re going to find they’re very scarce. If you go out to be a friend, you’ll find them everywhere.”</p>
+    <p>“If you go looking for a friend, you're going to find they're very scarce. If you go out to be a friend, you'll
+      find them everywhere.”</p>
   </div>
-    <hr>
+  <hr>
   <div>
     <img src="pranit.jpg">
     <h3>Pranit Puri</h3>
-    <p> “You can always tell a real friend: when you’ve made a fool of yourself he doesn’t feel you’ve done a permanent job.”</p>
+    <p> “You can always tell a real friend: when you've made a fool of yourself he doesn't feel you've done a permanent
+      job.”</p>
   </div>
-    <hr>
+  <hr>
   <br>
-  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="paras-gupta-34a780166"><a class="LI-simple-link" href='https://in.linkedin.com/in/paras-gupta-34a780166?trk=profile-badge'>Paras Gupta</a></div>
-  </body>
+  <div style="text-align: center; width: 100%;">
+    Made with ❤️ by <a href="https://github.com/g-paras">Paras Gupta</a>
+  </div>
+</body>
+
 </html>
